# pico-engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: main.c
src/colour/: CMakeLists.txt  colour.h  rgb332.h  rgb565.h
src/common/: CMakeLists.txt  components.h  depth.h  fixed_point.h  macros.h  qtype.h
src/device/: CMakeLists.txt  device.c  device.h  input.c  input.h  lcd.c  lcd.h
src/graphics/: CMakeLists.txt  camera.c  camera.h  mesh.h  model.c  model.h  object.h  scene.c  scene.h  texture.h
src/mesh/: CMakeLists.txt  mesh.c  mesh.h
src/models/: CMakeLists.txt  license.txt  scene_models.c  scene_models.h
src/pgl/: CMakeLists.txt  depth.h  pgl.c  pgl.h
src/swapchain/: CMakeLists.txt  swapchain.c  swapchain.h
